--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.4
-torch==2.0.0
-torchvision==0.15.0
+torch
+torchvision
 numpy==1.24.3
 opencv-python==4.8.0.76
 easyocr==1.6.2
