--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,10 @@ Flask==2.3.2
 Flask-SQLAlchemy==3.0.4
 torch
 torchvision
-numpy==1.24.3
+numpy==1.23.5  # Use a compatible version for your Python version
 opencv-python==4.8.0.76
-easyocr==1.6.2
+opencv-python-headless==4.8.0.76
+easyocr==1.7.2
 tensorflow==2.12.0
 Pillow==9.5.0
 ensemble-boxes==1.0.9
